deploy: 8af7ce020698a7e1fc05ad3398fc85ceb612c917

--- a/ddd/data-intensive-application/index.html
+++ b/ddd/data-intensive-application/index.html
@@ -4842,7 +4842,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -4861,7 +4880,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -4880,7 +4899,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -4899,7 +4918,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -4974,7 +4993,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -4993,7 +5031,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -5012,7 +5050,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -5031,7 +5069,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -8227,7 +8265,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -8246,7 +8303,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -8265,7 +8322,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -8284,7 +8341,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -8359,7 +8416,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -8378,7 +8454,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -8397,7 +8473,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -8416,7 +8492,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
