--- a/ddd/dia-1/index.html
+++ b/ddd/dia-1/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-9987017245102B708B9BEC5DEE998BBF40BEAAD8E43363EA774F86B38F61E19B.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -333,7 +333,9 @@ td {
     </style>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<body data-id="1"><div data-id="2" class="ft_column __w-1 __h-2"><div data-id="3" class="ft_column ft_full_size"><div data-id="4" class="ft_column __w-3 __h-4 __bgc-5"><comment data-id="5"></comment><div data-id="6" class="ft_column"><comment data-id="7"></comment></div><comment data-id="8"></comment><comment data-id="9"></comment><div data-id="11" class="ft_column __w-6 __bgc-7"><div data-id="12" class="ft_column"><comment data-id="13"></comment></div><div data-id="14" class="ft_column __w-8"><comment data-id="15"></comment><comment data-id="16"></comment><comment data-id="17"></comment><comment data-id="18"></comment><div data-id="20" class="ft_column __w-9 __bgc-10"><div data-id="21" class="ft_row __w-11 __pl-12 __pr-13 __pt-14 __pb-15 __jc-16 __ali-17"><div data-id="22" class="ft_column"></div><div data-id="23" class="ft_row __w-18 __g-19"><img data-id="24" src="-/fastn-community.github.io/doc-site/static/header/hamburger.svg" class="__cur-20 __as-21 __w-22"></img><comment data-id="25"></comment><img data-id="26" src="-/arjaupashak.com/static/logo.svg" class="__h-23"></img><comment data-id="27"></comment><comment data-id="28"></comment><comment data-id="29"></comment></div><comment data-id="30"></comment></div><div data-id="31" class="ft_row __w-24 __bgc-25"></div><div data-id="32" class="ft_row __w-26"><div data-id="33" class="ft_row __as-27"><comment data-id="34"></comment><a data-id="35" href="ddd/" class="__rl-28 __w-29 __pl-30 __pr-31 __pt-32 __pb-33 __c-34 __bgc-35 __white-space-36">My Day to Day Learnings and Discoveries</a></div><div data-id="36" class="ft_row __w-37 __pt-38 __ox-39 __g-40"><comment data-id="37"></comment><div data-id="38" class="ft_column __cur-41"><comment data-id="39"></comment><a data-id="40" href="ddd/funny-github-workflow/" class="__rl-42 __pl-43 __ml-44 __c-45 __white-space-46">Personal</a></div><div data-id="41" class="ft_column __cur-47"><comment data-id="42"></comment><a data-id="43" href="/fifthtry/" class="__rl-48 __pl-49 __ml-50 __c-51 __white-space-52">FifthTry</a></div><div data-id="44" class="ft_column __cur-53"><comment data-id="45"></comment><a data-id="46" href="/rust/" class="__rl-54 __pl-55 __ml-56 __c-57 __white-space-58">Rust</a></div></div></div><comment data-id="47"></comment><div data-id="48" class="ft_row __cur-59 __w-60 __pl-61 __pr-62 __bgc-63"><div data-id="49" class="ft_row __w-64 __pt-65 __pb-66 __g-67"><comment data-id="50"></comment><div data-id="51" class="__rl-68 __c-69 __white-space-70">Personal</div><comment data-id="52"></comment><comment data-id="53"></comment><div data-id="54" class="ft_row"><comment data-id="55"></comment><div data-id="56" class="ft_row"><div data-id="57" class="__rl-71 __c-72 __white-space-73">-&gt;</div></div></div><comment data-id="58"></comment><div data-id="59" class="__rl-74 __c-75 __white-space-76">Reliable Scalable and Maintainable Application</div></div><div data-id="60" class="ft_row __as-77 __h-78"><div data-id="61" class="ft_row __as-79 __w-80"><comment data-id="62"></comment><img data-id="63" src="-/fastn-community.github.io/header/static/down-arrow-dark.svg" class="__w-81 __h-82"></img><comment data-id="64"></comment></div></div><comment data-id="65"></comment></div></div></div><div data-id="66" class="ft_column __w-83 __pl-84 __pr-85 __pt-86 __pb-87"><div data-id="67" class="ft_column __w-88"><div data-id="68" class="ft_row __w-89"><comment data-id="69"></comment><div data-id="70" class="ft_column __w-90"><h1 data-id="71" id="reliable-scalable-and-maintainable-applications" class="__rl-91 __w-92 __mb-93 __bbw-94 __bc-95 __c-96">Reliable, Scalable, and Maintainable Applications</h1><comment data-id="72"></comment><div data-id="73" class="ft_column __w-97"></div></div><comment data-id="74"></comment></div><comment data-id="75"></comment></div><comment data-id="76"></comment><div data-id="77" class="ft_column __w-98"><comment data-id="78"></comment><div data-id="79" class="__rl-99 __w-100 __c-101"><strong>Note</strong>: The content is taken from <a href="https://public.nikhil.io/Designing%20Data%20Intensive%20Applications.pdf"><code>Designing Data Intensive Application by Martin Kleppmann</code></a>
+<body data-id="1"><div data-id="2" class="ft_column __w-1 __h-2"><div data-id="3" class="ft_column ft_full_size"><div data-id="4" class="ft_column __w-3 __h-4 __bgc-5"><comment data-id="5"></comment><div data-id="6" class="ft_column"><comment data-id="7"></comment></div><comment data-id="8"></comment><comment data-id="9"></comment><div data-id="11" class="ft_column __w-6 __bgc-7"><div data-id="12" class="ft_column"><comment data-id="13"></comment></div><div data-id="14" class="ft_column __w-8"><comment data-id="15"></comment><comment data-id="16"></comment><comment data-id="17"></comment><comment data-id="18"></comment><div data-id="20" class="ft_column __w-9 __bgc-10"><div data-id="21" class="ft_row __w-11 __pl-12 __pr-13 __pt-14 __pb-15 __jc-16 __ali-17"><div data-id="22" class="ft_column"></div><div data-id="23" class="ft_row __w-18 __g-19"><img data-id="24" src="-/fastn-community.github.io/doc-site/static/header/hamburger.svg" class="__cur-20 __as-21 __w-22"></img><comment data-id="25"></comment><img data-id="26" src="-/arjaupashak.com/static/logo.svg" class="__h-23"></img><comment data-id="27"></comment><comment data-id="28"></comment><comment data-id="29"></comment></div><comment data-id="30"></comment></div><div data-id="31" class="ft_row __w-24 __bgc-25"></div><div data-id="32" class="ft_row __w-26"><div data-id="33" class="ft_row __as-27"><comment data-id="34"></comment><a data-id="35" href="ddd/" class="__rl-28 __w-29 __pl-30 __pr-31 __pt-32 __pb-33 __c-34 __bgc-35 __white-space-36">My Day to Day Learnings and Discoveries</a></div><div data-id="36" class="ft_row __w-37 __pt-38 __ox-39 __g-40"><comment data-id="37"></comment><div data-id="38" class="ft_column __cur-41"><comment data-id="39"></comment><a data-id="40" href="ddd/funny-github-workflow/" class="__rl-42 __pl-43 __ml-44 __c-45 __white-space-46">Personal</a></div><div data-id="41" class="ft_column __cur-47"><comment data-id="42"></comment><a data-id="43" href="/fifthtry/" class="__rl-48 __pl-49 __ml-50 __c-51 __white-space-52">FifthTry</a></div><div data-id="44" class="ft_column __cur-53"><comment data-id="45"></comment><a data-id="46" href="/rust/" class="__rl-54 __pl-55 __ml-56 __c-57 __white-space-58">Rust</a></div></div></div><comment data-id="47"></comment><div data-id="48" class="ft_row __cur-59 __w-60 __pl-61 __pr-62 __bgc-63"><div data-id="49" class="ft_row __w-64 __pt-65 __pb-66 __g-67"><comment data-id="50"></comment><div data-id="51" class="__rl-68 __c-69 __white-space-70">Personal</div><comment data-id="52"></comment><comment data-id="53"></comment><div data-id="54" class="ft_row"><comment data-id="55"></comment><div data-id="56" class="ft_row"><div data-id="57" class="__rl-71 __c-72 __white-space-73">-&gt;</div></div></div><comment data-id="58"></comment><div data-id="59" class="__rl-74 __c-75 __white-space-76"><ul>
+<li>Reliable Scalable and Maintainable Application</li>
+</ul></div></div><div data-id="60" class="ft_row __as-77 __h-78"><div data-id="61" class="ft_row __as-79 __w-80"><comment data-id="62"></comment><img data-id="63" src="-/fastn-community.github.io/header/static/down-arrow-dark.svg" class="__w-81 __h-82"></img><comment data-id="64"></comment></div></div><comment data-id="65"></comment></div></div></div><div data-id="66" class="ft_column __w-83 __pl-84 __pr-85 __pt-86 __pb-87"><div data-id="67" class="ft_column __w-88"><div data-id="68" class="ft_row __w-89"><comment data-id="69"></comment><div data-id="70" class="ft_column __w-90"><h1 data-id="71" id="reliable-scalable-and-maintainable-applications" class="__rl-91 __w-92 __mb-93 __bbw-94 __bc-95 __c-96">Reliable, Scalable, and Maintainable Applications</h1><comment data-id="72"></comment><div data-id="73" class="ft_column __w-97"></div></div><comment data-id="74"></comment></div><comment data-id="75"></comment></div><comment data-id="76"></comment><div data-id="77" class="ft_column __w-98"><comment data-id="78"></comment><div data-id="79" class="__rl-99 __w-100 __c-101"><strong>Note</strong>: The content is taken from <a href="https://public.nikhil.io/Designing%20Data%20Intensive%20Applications.pdf"><code>Designing Data Intensive Application by Martin Kleppmann</code></a>
 <ul>
 <li>Reliability: The system should continue to work correctly.</li>
 <li>Scalable: As the system grows (in data volume, traffic volume, or complexity),
@@ -5276,7 +5278,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -5295,7 +5316,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -5314,7 +5335,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -5333,7 +5354,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -5392,7 +5413,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
   record.set("current_page", function () {
     let record = fastn.recordInstance({
     });
-    record.set("title", "Reliable Scalable and Maintainable Application");
+    record.set("title", "-  Reliable Scalable and Maintainable Application");
     record.set("url", "ddd/dia-1/");
     record.set("description", null);
     record.set("path", null);
@@ -8586,7 +8607,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -8605,7 +8645,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -8624,7 +8664,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -8643,7 +8683,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -8702,7 +8742,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
   record.set("current_page", function () {
     let record = fastn.recordInstance({
     });
-    record.set("title", "Reliable Scalable and Maintainable Application");
+    record.set("title", "-  Reliable Scalable and Maintainable Application");
     record.set("url", "ddd/dia-1/");
     record.set("description", null);
     record.set("path", null);
