--- a/search/index.html
+++ b/search/index.html
@@ -10048,7 +10048,26 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_search___sitemap", funct
         record.set("children", fastn.mutableList([function () {
           let record = fastn.recordInstance({
           });
-          record.set("title", "Reliable Scalable and Maintainable Application");
+          record.set("title", "Part I. Foundations of Data Systems");
+          record.set("url", "");
+          record.set("description", null);
+          record.set("path", null);
+          record.set("number", null);
+          record.set("font_icon", null);
+          record.set("img_src", null);
+          record.set("bury", false);
+          record.set("document", null);
+          record.set("is_heading", false);
+          record.set("is_disabled", false);
+          record.set("is_active", false);
+          record.set("is_open", false);
+          record.set("children", fastn.mutableList([]));
+          return record;
+        }(),
+        function () {
+          let record = fastn.recordInstance({
+          });
+          record.set("title", "-  Reliable Scalable and Maintainable Application");
           record.set("url", "/ddd/dia-1/");
           record.set("description", null);
           record.set("path", null);
@@ -10067,7 +10086,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_search___sitemap", funct
         function () {
           let record = fastn.recordInstance({
           });
-          record.set("title", "Data Models and Query Languages");
+          record.set("title", "-  Data Models and Query Languages");
           record.set("url", "/ddd/dia-2/");
           record.set("description", null);
           record.set("path", null);
@@ -10086,7 +10105,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_search___sitemap", funct
         function () {
           let record = fastn.recordInstance({
           });
-          record.set("title", "Storage and Retrieval");
+          record.set("title", "-  Storage and Retrieval");
           record.set("url", "/ddd/dia-3/");
           record.set("description", null);
           record.set("path", null);
@@ -10105,7 +10124,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_search___sitemap", funct
         function () {
           let record = fastn.recordInstance({
           });
-          record.set("title", "Encoding and Evolution");
+          record.set("title", "-  Encoding and Evolution");
           record.set("url", "/ddd/dia-4/");
           record.set("description", null);
           record.set("path", null);
