--- a/ddd/index.html
+++ b/ddd/index.html
@@ -4830,7 +4830,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -4849,7 +4868,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -4868,7 +4887,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -4887,7 +4906,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -8104,7 +8123,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -8123,7 +8161,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -8142,7 +8180,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -8161,7 +8199,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
