--- a/ddd/preflight-cors-issue/index.html
+++ b/ddd/preflight-cors-issue/index.html
@@ -5110,7 +5110,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -5129,7 +5148,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -5148,7 +5167,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -5167,7 +5186,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
@@ -8420,7 +8439,26 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("title", "Part I. Foundations of Data Systems");
+      record.set("url", null);
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "-  Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
@@ -8439,7 +8477,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Data Models and Query Languages");
+      record.set("title", "-  Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
@@ -8458,7 +8496,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Storage and Retrieval");
+      record.set("title", "-  Storage and Retrieval");
       record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
@@ -8477,7 +8515,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     function () {
       let record = fastn.recordInstance({
       });
-      record.set("title", "Encoding and Evolution");
+      record.set("title", "-  Encoding and Evolution");
       record.set("url", "ddd/dia-4/");
       record.set("description", null);
       record.set("path", null);
